# datagather

./: .codacy.yml  .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: release.yml  tests.yml
docs/: Makefile  conf.py  genstubs  index.rst  requirements.txt  runtime.rst
src/datagather/: __main__.py  runtime.py  tools.py
src/datagather/checks/: __init__.py  cpu.py  df.py  memory.py  platform.py
src/datagather/loggers/: __init__.py  json.py  pprint.py
tests/: conftest.py  test_checks_cpu.py  test_checks_df.py  test_checks_memory.py  test_checks_platform.py  test_runtime.py
