[project]
name = "datagather"
version = "0.0.0"
authors = [
  { name="Michael Lustfield", email="mtecknology@debian.org" },
]
description = "Collect information from devices"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "License :: DFSG approved",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Topic :: Utilities",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
datagather = "datagather.__main__:main"

[project.urls]
"Homepage" = "https://github.com/MTecknology/datagather"
"Documentation" = "http://datagather.readthedocs.io/"
"Bug Tracker" = "https://github.com/MTecknology/datagather/issues"
